# vitdet

./: Makefile  package-lock.json  pyproject.toml
tests/: test_version.py  test_vitdet.py
train/imagenet/: contrastive.py  dataset.py  vitdet_base_patch16_512.yaml  vitdet_base_patch8_224.yaml  vitdet_base_patch8_224_multitask.yaml
vitdet/: __init__.py  helpers.py  pos_enc.py  stem.py  vitdet.py
vitdet/train/: contrastive.py  helpers.py  imagenet.py  mae.py  multitask.py
