[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "vitdet"
description = ""
requires-python = ">=3.8"
authors = [
    {name = "Scott Chase Waggener", email = "tidalpaladin@protonmail.com"},
]
dependencies = [
    "torch>=2.0",
    "einops>=0.6.1",
    "registry @ git+https://github.com/TidalPaladin/callable-registry.git",
    "numpy>=1.24.3",
]
readme = "README.md"
license = {text = "Apache"}
dynamic = ["version"]

[project.optional-dependencies]
train = [
    "deep-helpers @ git+https://github.com/TidalPaladin/deep-helpers.git",
    "ssl-tasks @ git+https://github.com/TidalPaladin/ssl-tasks.git",
    "lightning-bolts>=0.6.0.post1",
    "wandb>=0.15.4",
]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "coverage",
  "pdbpp",
]
quality = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "isort",
]

[tool.pytest.ini_options]
markers = [
  "ci_skip",
]
filterwarnings = []

# Sample script config
[project.scripts]
train = "deep_helpers.cli:main"
